// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RuntimeInput Tests for checkbox, RadioGroup and Text Area should render with default fixed values 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <div
          class="bp3-form-group multiTypeCheckbox"
          data-id="checkboxValue-0"
        >
          <div
            class="bp3-form-content"
          >
            <div
              class="Layout--horizontal StyledProps--main MultiTypeInput--main"
            >
              <label
                class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox input StyledProps--main"
              >
                <input
                  checked=""
                  name="checkboxValue"
                  type="checkbox"
                />
                <span
                  class="bp3-control-indicator"
                />
                CheckBox
              </label>
              <span
                class="bp3-popover-wrapper MultiTypeInput--wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="MultiTypeInput--btn MultiTypeInput--FIXED"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="fixed-input"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 9 9"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 0 1 .1-.29l1.43-1.42a.76.76 0 0 1 .28-.15c.39-.1 1 0 1.28-.29a.34.34 0 0 0 0-.51l-2.42-2.42a.33.33 0 0 0 -.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 0 1 -.13.23l-1.44 1.47a.29.29 0 0 1 -.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 0 0 0 .54.36.36 0 0 0 .54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
            <span
              class="Tooltip--acenter tooltip"
              data-tooltip-id="runtimeInputsTest_checkboxValue"
            />
          </div>
        </div>
        <div
          class="bp3-form-group"
          data-id="radioValue-1"
        >
          <label
            class="bp3-label"
            for="radioValue"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="runtimeInputsTest_radioValue"
            >
              RadioGroup
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="Layout--horizontal StyledProps--main MultiTypeInput--main"
            >
              <div
                class="input"
              >
                <label
                  class="bp3-control bp3-radio"
                >
                  <input
                    name="radioValue"
                    type="radio"
                    value="option1"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  Option 1
                </label>
                <label
                  class="bp3-control bp3-radio"
                >
                  <input
                    checked=""
                    name="radioValue"
                    type="radio"
                    value="option2"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  Option 2
                </label>
              </div>
              <span
                class="bp3-popover-wrapper MultiTypeInput--wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="MultiTypeInput--btn MultiTypeInput--FIXED"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="fixed-input"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 9 9"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 0 1 .1-.29l1.43-1.42a.76.76 0 0 1 .28-.15c.39-.1 1 0 1.28-.29a.34.34 0 0 0 0-.51l-2.42-2.42a.33.33 0 0 0 -.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 0 1 -.13.23l-1.44 1.47a.29.29 0 0 1 -.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 0 0 0 .54.36.36 0 0 0 .54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="bp3-form-group"
          data-id="textAreaValue-2"
        >
          <label
            class="bp3-label"
            for="textAreaValue"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="runtimeInputsTest_textAreaValue"
            >
              TextArea
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="StyledProps--font StyledProps--main"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                style="flex-grow: 1;"
              >
                <textarea
                  class="bp3-input input"
                  name="textAreaValue"
                >
                  Hi
                </textarea>
                <span
                  class="bp3-popover-wrapper MultiTypeInput--wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="MultiTypeInput--btn MultiTypeInput--FIXED multiButtonForFixedType"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="fixed-input"
                      >
                        <svg
                          height="12"
                          viewBox="0 0 9 9"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="m5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 0 1 .1-.29l1.43-1.42a.76.76 0 0 1 .28-.15c.39-.1 1 0 1.28-.29a.34.34 0 0 0 0-.51l-2.42-2.42a.33.33 0 0 0 -.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 0 1 -.13.23l-1.44 1.47a.29.29 0 0 1 -.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 0 0 0 .54.36.36 0 0 0 .54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`RuntimeInput Tests for checkbox, RadioGroup and Text Area should render with default runtimeInput values 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <div
          class="bp3-form-group multiTypeCheckbox"
          data-id="checkboxValue-0"
        >
          <label
            class="bp3-label"
            for="checkboxValue"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="runtimeInputsTest_checkboxValue"
            >
              CheckBox
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="Layout--horizontal StyledProps--main MultiTypeInput--main MultiTypeInput--disabled"
            >
              <div
                class="TextInput--main MultiTypeInput--input"
              >
                <div
                  class="bp3-input-group bp3-disabled"
                >
                  <input
                    class="bp3-input"
                    disabled=""
                    name="checkboxValue"
                    placeholder="<+input>"
                    type="text"
                    value="<+input>"
                  />
                </div>
              </div>
              <span
                class="bp3-popover-wrapper MultiTypeInput--wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="MultiTypeInput--btn MultiTypeInput--RUNTIME"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="runtime-input"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 10 7.97"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m8.14 4-.14-.28a2.53 2.53 0 0 1 -.12-.3l-.16-.35c-.11-.25-.22-.38-.32-.38s-.28.15-.37.44c-.03-.03-.03-.06-.03-.13a.73.73 0 0 1 .24-.46.66.66 0 0 1 .42-.26c.25 0 .5.35.76 1.05l.07.17.07-.12c.47-.73.86-1.1 1.18-1.1a.71.71 0 0 1 .29.07l-.4.42h-.11c-.24 0-.52.28-.86.83l-.09.16.07.2c.29.79.53 1.18.71 1.18s.31-.12.4-.36q.09.06.09.12t-.27.39a.74.74 0 0 1 -.45.23c-.25 0-.51-.36-.77-1.07l-.12-.25-.1.17c-.44.76-.87 1.14-1.28 1.14a.65.65 0 0 1 -.39-.12l.38-.39a.32.32 0 0 0 .23.1c.25 0 .53-.25.83-.74l.17-.28zm-4-.32-2.44-3.09h2.47s.83-.07 1.18.41a3.28 3.28 0 0 1 .42 1.14h.31l-.14-2.14h-5.94v.31l3.06 3.74-3.06 3.57v.38h6.08l.38-2.36-.31-.07a2.43 2.43 0 0 1 -.52 1c-.42.48-2 .41-2 .41h-2.24z"
                          fill="current-color"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="bp3-form-group"
          data-id="radioValue-1"
        >
          <label
            class="bp3-label"
            for="radioValue"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="runtimeInputsTest_radioValue"
            >
              RadioGroup
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="Layout--horizontal StyledProps--main MultiTypeInput--main MultiTypeInput--disabled"
            >
              <div
                class="TextInput--main MultiTypeInput--input"
              >
                <div
                  class="bp3-input-group bp3-disabled"
                >
                  <input
                    class="bp3-input"
                    disabled=""
                    name="radioValue"
                    placeholder="<+input>"
                    type="text"
                    value="<+input>"
                  />
                </div>
              </div>
              <span
                class="bp3-popover-wrapper MultiTypeInput--wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="MultiTypeInput--btn MultiTypeInput--RUNTIME"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="runtime-input"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 10 7.97"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m8.14 4-.14-.28a2.53 2.53 0 0 1 -.12-.3l-.16-.35c-.11-.25-.22-.38-.32-.38s-.28.15-.37.44c-.03-.03-.03-.06-.03-.13a.73.73 0 0 1 .24-.46.66.66 0 0 1 .42-.26c.25 0 .5.35.76 1.05l.07.17.07-.12c.47-.73.86-1.1 1.18-1.1a.71.71 0 0 1 .29.07l-.4.42h-.11c-.24 0-.52.28-.86.83l-.09.16.07.2c.29.79.53 1.18.71 1.18s.31-.12.4-.36q.09.06.09.12t-.27.39a.74.74 0 0 1 -.45.23c-.25 0-.51-.36-.77-1.07l-.12-.25-.1.17c-.44.76-.87 1.14-1.28 1.14a.65.65 0 0 1 -.39-.12l.38-.39a.32.32 0 0 0 .23.1c.25 0 .53-.25.83-.74l.17-.28zm-4-.32-2.44-3.09h2.47s.83-.07 1.18.41a3.28 3.28 0 0 1 .42 1.14h.31l-.14-2.14h-5.94v.31l3.06 3.74-3.06 3.57v.38h6.08l.38-2.36-.31-.07a2.43 2.43 0 0 1 -.52 1c-.42.48-2 .41-2 .41h-2.24z"
                          fill="current-color"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="bp3-form-group"
          data-id="textAreaValue-2"
        >
          <label
            class="bp3-label"
            for="textAreaValue"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="runtimeInputsTest_textAreaValue"
            >
              TextArea
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="StyledProps--font StyledProps--main"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main MultiTypeInput--disabled"
                style="flex-grow: 1;"
              >
                <div
                  class="TextInput--main MultiTypeInput--input"
                >
                  <div
                    class="bp3-input-group bp3-disabled"
                  >
                    <input
                      class="bp3-input"
                      disabled=""
                      name="textAreaValue"
                      placeholder="<+input>"
                      type="text"
                      value="<+input>"
                    />
                  </div>
                </div>
                <span
                  class="bp3-popover-wrapper MultiTypeInput--wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="MultiTypeInput--btn MultiTypeInput--RUNTIME"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="runtime-input"
                      >
                        <svg
                          height="12"
                          viewBox="0 0 10 7.97"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="m8.14 4-.14-.28a2.53 2.53 0 0 1 -.12-.3l-.16-.35c-.11-.25-.22-.38-.32-.38s-.28.15-.37.44c-.03-.03-.03-.06-.03-.13a.73.73 0 0 1 .24-.46.66.66 0 0 1 .42-.26c.25 0 .5.35.76 1.05l.07.17.07-.12c.47-.73.86-1.1 1.18-1.1a.71.71 0 0 1 .29.07l-.4.42h-.11c-.24 0-.52.28-.86.83l-.09.16.07.2c.29.79.53 1.18.71 1.18s.31-.12.4-.36q.09.06.09.12t-.27.39a.74.74 0 0 1 -.45.23c-.25 0-.51-.36-.77-1.07l-.12-.25-.1.17c-.44.76-.87 1.14-1.28 1.14a.65.65 0 0 1 -.39-.12l.38-.39a.32.32 0 0 0 .23.1c.25 0 .53-.25.83-.74l.17-.28zm-4-.32-2.44-3.09h2.47s.83-.07 1.18.41a3.28 3.28 0 0 1 .42 1.14h.31l-.14-2.14h-5.94v.31l3.06 3.74-3.06 3.57v.38h6.08l.38-2.36-.31-.07a2.43 2.43 0 0 1 -.52 1c-.42.48-2 .41-2 .41h-2.24z"
                            fill="current-color"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`RuntimeInput Tests for checkbox, RadioGroup and Text Area should render without default values 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <div
          class="bp3-form-group multiTypeCheckbox"
          data-id="checkboxValue-0"
        >
          <div
            class="bp3-form-content"
          >
            <div
              class="Layout--horizontal StyledProps--main MultiTypeInput--main"
            >
              <label
                class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox input StyledProps--main"
              >
                <input
                  name="checkboxValue"
                  type="checkbox"
                />
                <span
                  class="bp3-control-indicator"
                />
                CheckBox
              </label>
              <span
                class="bp3-popover-wrapper MultiTypeInput--wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="MultiTypeInput--btn MultiTypeInput--FIXED"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="fixed-input"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 9 9"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 0 1 .1-.29l1.43-1.42a.76.76 0 0 1 .28-.15c.39-.1 1 0 1.28-.29a.34.34 0 0 0 0-.51l-2.42-2.42a.33.33 0 0 0 -.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 0 1 -.13.23l-1.44 1.47a.29.29 0 0 1 -.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 0 0 0 .54.36.36 0 0 0 .54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
            <span
              class="Tooltip--acenter tooltip"
              data-tooltip-id="runtimeInputsTest_checkboxValue"
            />
          </div>
        </div>
        <div
          class="bp3-form-group"
          data-id="radioValue-1"
        >
          <label
            class="bp3-label"
            for="radioValue"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="runtimeInputsTest_radioValue"
            >
              RadioGroup
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="Layout--horizontal StyledProps--main MultiTypeInput--main"
            >
              <div
                class="input"
              >
                <label
                  class="bp3-control bp3-radio"
                >
                  <input
                    name="radioValue"
                    type="radio"
                    value="option1"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  Option 1
                </label>
                <label
                  class="bp3-control bp3-radio"
                >
                  <input
                    name="radioValue"
                    type="radio"
                    value="option2"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  Option 2
                </label>
              </div>
              <span
                class="bp3-popover-wrapper MultiTypeInput--wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="MultiTypeInput--btn MultiTypeInput--FIXED"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="fixed-input"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 9 9"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 0 1 .1-.29l1.43-1.42a.76.76 0 0 1 .28-.15c.39-.1 1 0 1.28-.29a.34.34 0 0 0 0-.51l-2.42-2.42a.33.33 0 0 0 -.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 0 1 -.13.23l-1.44 1.47a.29.29 0 0 1 -.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 0 0 0 .54.36.36 0 0 0 .54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="bp3-form-group"
          data-id="textAreaValue-2"
        >
          <label
            class="bp3-label"
            for="textAreaValue"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="runtimeInputsTest_textAreaValue"
            >
              TextArea
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="StyledProps--font StyledProps--main"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                style="flex-grow: 1;"
              >
                <textarea
                  class="bp3-input input"
                  name="textAreaValue"
                />
                <span
                  class="bp3-popover-wrapper MultiTypeInput--wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="MultiTypeInput--btn MultiTypeInput--FIXED multiButtonForFixedType"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="fixed-input"
                      >
                        <svg
                          height="12"
                          viewBox="0 0 9 9"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="m5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 0 1 .1-.29l1.43-1.42a.76.76 0 0 1 .28-.15c.39-.1 1 0 1.28-.29a.34.34 0 0 0 0-.51l-2.42-2.42a.33.33 0 0 0 -.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 0 1 -.13.23l-1.44 1.47a.29.29 0 0 1 -.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 0 0 0 .54.36.36 0 0 0 .54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;
